# e2guardian

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  :  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog3.x  ChangeLog4.x  DGChangeLog  HOWTOBuildRelease.txt  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  UPGRADING  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.lineno  dgconfig.h  dgconfig.h.in  e2guardian.release  ipv6_Sascha_Hlusiak_need_help.patch  stamp-h1  tarballup.sh  visd-checkinstall  visd-configure
configs/: DockeFile  DockerFile  Makefile  Makefile.am  Makefile.in  common.story  dansguardian.conf  dansguardian.conf.in  dansguardianf1.conf.in  e2guardian.conf  e2guardian.conf.in  e2guardianf1.conf  e2guardianf1.conf.in  examplef1.story  examplef1.story.in  preauth.story  site.story  storyboard.example
configs/authplugins/: BearerBasic.conf  Makefile  Makefile.am  Makefile.in  dnsauth.conf  ident.conf  ip.conf  ip.conf.in  pf-basic.conf  port.conf  port.conf.in  proxy-basic.conf  proxy-digest.conf  proxy-header.conf  proxy-ntlm.conf
configs/contentscanners/: Makefile  Makefile.am  Makefile.in  avastdscan.conf  avastdscan.conf.in  clamdscan.conf  clamdscan.conf.in  commandlinescan.conf  commandlinescan.conf.in  icapscan.conf  icapscan.conf.in  kavdscan.conf  kavdscan.conf.in
configs/downloadmanagers/: Makefile  Makefile.am  Makefile.in  dansguardian  default.conf.in  fancy.conf  fancy.conf.in  trickle.conf
configs/lists/: Makefile  Makefile.am  Makefile.in  README  addheaderregexplist  authexceptioniplist  bannedclientlist  bannedextensionlist  bannediplist  bannedmimetypelist  bannedphraselist  bannedphraselist.in  bannedregexpheaderlist  bannedregexpurllist  bannedregexpuseragentlist  bannedsiteiplistwithbypass  bannedsitelist  bannedsitelist.in  bannedsitelistwithbypass  bannedsitelistwithbypass.in  bannedsslsitelist  bannedurllist  bannedurllist.in  bannedurllistwithbypass.in  blacklist.txt  blankettimelist  contentregexplist  domainsnobypass.in  embededreferersiteiplist  exceptionextensionlist  exceptionfilesitelist  exceptionfileurllist  exceptioniplist  exceptionmimetypelist  exceptionphraselist  exceptionphraselist.in  exceptionregexpheaderlist  exceptionregexpurllist  exceptionregexpuseragentlist  exceptionsiteiplist  (+45 more)
configs/lists/authplugins/: Makefile  (+4 more)
configs/log_formats/: Makefile.am  logformat1  logformat2  logformat3  logformat4  logformat5  logformat6  logformat7  logformat8  requestlogformat
data/: Makefile  Makefile.am  Makefile.in  blockedflash.swf  dansguardian.pl  e2gerror.php  e2guardian.pl
data/languages/: Makefile  Makefile.am  Makefile.in  ReadMe  messages_master  update_messages
data/scripts/: Dockerfile  Makefile  Makefile.am  Makefile.in  bsd-init  bsd-init.in  dansguardian  dansguardian.in  e2guardian  e2guardian.in  e2guardian.service  e2guardian.service.in  e2guardianrasp.service.in  generate_geo_lists.sh  logrotation  logrotation.in  solaris-init  solaris-init.in  systemv-init  systemv-init.in
data/source_flash/: guardian.fla
migration_installation/: Makefile  Makefile.am  Makefile.in  installation_or_migration_from_dg.sh  installation_or_migration_from_dg.sh.in  migration.sh
migration_installation/basic/: e2guardian.conf  e2guardianf1.conf
migration_installation/init.d/: e2guardian-redhat
migration_installation/logrotate.d/: e2guardian
notes/: AuthPlugins  GeoLocation  HOWTO_Logger.md  ICAP_server_notes_for_implimenting_ICAP_client  LogFormatFiles  LogRequests  Makefile.am  NEWIN_v4  NEWIN_v5  Upgrading_to_V5  Upgrading_to_V5.4  V5_Storyboard.odt  V5_list_definition.odt  V5_mode_comparison.odt  certificate_errors  cgi_bypass  dstats_format  e2guardian.release  e2guardian.release.v3.0  extended_rooms  icap  lists_via_stdin  per_category_block_forms  port_auth  rotating_logs  ssl_mitm  template_variables
src/: .ConnectionHandler.cpp.swp  AccessLogger.cpp  AccessLogger.hpp  Auth.cpp  Auth.hpp  BackedStore.cpp  BackedStore.hpp  BaseSocket.cpp  BaseSocket.hpp  CH.cpp  CH2.cpp  CHpip.cpp  CertificateAuthority.cpp  CertificateAuthority.hpp  ConfigReader.cpp  ConfigReader.hpp  ConfigVar.cpp  ConfigVar.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  ContentScanner.cpp  ContentScanner.hpp  DStat.cpp  DStat.hpp  DataBuffer.cpp  DataBuffer.hpp  DebugManager.cpp  DebugManager.hpp  DownloadManager.cpp  DownloadManager.hpp  DynamicIPList.cpp  DynamicIPList.hpp  DynamicURLList.cpp  DynamicURLList.hpp  FDFuncs.cpp  FDFuncs.hpp  FDTunnel.cpp  FDTunnel.hpp  FOptionContainer.cpp  FOptionContainer.hpp  (+72 more)
src/.deps/: dansguardian-Auth.Po  dansguardian-BackedStore.Po  dansguardian-BaseSocket.Po  dansguardian-CertificateAuthority.Po  dansguardian-ConfigVar.Po  dansguardian-ConnectionHandler.Po  dansguardian-ContentScanner.Po  dansguardian-DataBuffer.Po  dansguardian-DownloadManager.Po  dansguardian-DynamicIPList.Po  dansguardian-DynamicURLList.Po  dansguardian-FDFuncs.Po  dansguardian-FDTunnel.Po  dansguardian-FOptionContainer.Po  dansguardian-FatController.Po  dansguardian-HTMLTemplate.Po  dansguardian-HTTPHeader.Po  dansguardian-IPList.Po  dansguardian-ImageContainer.Po  dansguardian-LanguageContainer.Po  dansguardian-ListContainer.Po  dansguardian-ListManager.Po  dansguardian-NaughtyFilter.Po  dansguardian-OptionContainer.Po  dansguardian-RegExp.Po  dansguardian-Socket.Po  dansguardian-SocketArray.Po  dansguardian-String.Po  dansguardian-SysV.Po  dansguardian-UDSocket.Po  dansguardian-commandlinescan.Po  dansguardian-dansguardian.Po  dansguardian-default.Po  dansguardian-digest.Po  dansguardian-fancy.Po  dansguardian-ident.Po  dansguardian-ip.Po  dansguardian-md5.Po  dansguardian-proxy.Po  dansguardian-trickle.Po
src/Utils/: Path.cpp  Path.hpp
src/authplugins/: BearerBasic.cpp  ProxyFirstBasic.cpp  digest.cpp  dnsauth.cpp  header.cpp  ident.cpp  ip.cpp  ntlm.cpp  port.cpp  proxy.cpp
src/contentscanners/: avastdscan.cpp  clamdscan.cpp  commandlinescan.cpp  icapscan.cpp  kavdscan.cpp
src/downloadmanagers/: default.cpp  fancy.cpp  trickle.cpp
(+544 files in other folders)
