DISTCLEANFILES = README \
                 Makefile.in \
                 aclocal.m4 \
                 config.guess \
                 config.h.in \
                 config.sub \
                 configure \
                 dgconfig.h.in \
                 compile \
                 configure

SUBDIRS= doc data configs src

EXTRA_DIST = autogen.sh UPGRADING
